Change link url.

--- a/index.html
+++ b/index.html
@@ -31,10 +31,10 @@
 				You may or you may not know it but myself and Dsaerg have been trying our hardest to export webtoons to an English audience; from projects like Cheese in the Trap to the Orange Marmalade webtoon and even venturing in US webtoons with Anna &amp; Toby. Sadly, we kept getting issues with copyrights, sometimes we managed to get permissions to translate webtoons but more often than not we were asked to drop projects. This has caused you and us a great amount of pain and deception. This ends today!
 			</p>
 			<p class="p">
-                <strong>We've decided to team up with the team at <a href="http://tapastic.com">Tapastic</a>.</strong> The folks at Tapastic are exporting Daum.net webtoons; we firmly believe that their webtoon portfolio is what we all have ever wanted.
+                <strong>We've decided to team up with the team at <a href="http://tapastic.com/collection/webtoon">Tapastic</a>.</strong> The folks at Tapastic are exporting Daum.net webtoons; we firmly believe that their webtoon portfolio is what we all have ever wanted.
 			</p>
 			<p>
-            If you want to read many more future translations from the Webtoon Live Team, head over to <a href="http://tapastic.com">tapastic.com</a>.
+            If you want to read many more future translations from the Webtoon Live Team, head over to <a href="http://tapastic.com/collection/webtoon">tapastic.com</a>.
 			</p>
 			<p class="thanks">
 				Thanks for your continuous support!<br>
