--- a/index.html
+++ b/index.html
@@ -67,5 +67,19 @@
         </div>
         <p class="copyright">&copy; Copyright 2014 Tapas Media | <a href="mailto:hello@tapastic.com">Contact</a></p>
     </footer>
+
+    <script type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+              m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+      ga('create', 'UA-34830778-1', 'tapastic.com');
+      ga('send', {
+        'hitType': 'pageview',
+        'page': '/webthoonlive.html',
+        'title': 'Webtoonlive homepage | Tapastic'
+      });
+    </script>
 </body>
 </html>
