Do Mobile friendly.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 	<meta name="description" content="Check some amazing webcomics on Webtoon Live.">
 	<link href='http://fonts.googleapis.com/css?family=Montserrat:400,700' rel='stylesheet' type='text/css'>
 	<link type="text/css" rel="stylesheet" href="/css/style.css" />
-
+    <link href="http://tapastic.com/favicon.ico" rel="shortcut icon" type="image/x-icon">
+    <meta name="viewport" content="initial-scale=1,minimal-ui"/>
 </head>
 <body>
 	<nav id="nav">
@@ -19,7 +20,7 @@
 			
 		</div>
 	</nav>
-	<section id="top">
+	<section id="top" class="hidden">
 		<div class="top-banner"><div>
 	</section>
 	<section id="body">
@@ -31,10 +32,10 @@
 				You may or you may not know it but myself and Dsaerg have been trying our hardest to export webtoons to an English audience; from projects like Cheese in the Trap to the Orange Marmalade webtoon and even venturing in US webtoons with Anna &amp; Toby. Sadly, we kept getting issues with copyrights, sometimes we managed to get permissions to translate webtoons but more often than not we were asked to drop projects. This has caused you and us a great amount of pain and deception. This ends today!
 			</p>
 			<p class="p">
-                <strong>We've decided to team up with the team at <a href="http://tapastic.com/collection/webtoon">Tapastic</a>.</strong> Tapastic offers great selection of webcomics including some of the best Korean webtoons; we firmly believe that their webtoon portfolio is what we all have ever wanted.
+                <strong>We've decided to team up with the team at <a href="http://tapastic.com/premium">Tapastic</a>.</strong> Tapastic offers great selection of webcomics including some of the best Korean webtoons; we firmly believe that their webtoon portfolio is what we all have ever wanted.
 			</p>
 			<p>
-            If you want to read many more future translations from the Webtoon Live Team, head over to <a href="http://tapastic.com/collection/webtoon">tapastic.com</a>.
+            If you want to read many more future translations from the Webtoon Live Team, head over to <a href="http://tapastic.com/premium">tapastic.com</a>.
 			</p>
 			<p class="thanks">
 				Thanks for your continuous support!<br>
@@ -44,7 +45,7 @@
             <p class="come-check-out">Come check out tapastic!</p>
             <ul>
                 <li>
-                    <a href="http://tapastic.com/collection/webtoon">
+                    <a href="http://tapastic.com/premium">
                         <small>Browse our</small>
                         Webtoons
                     </a>
@@ -60,7 +61,7 @@
 		</article>
 	</section>	
     <footer id="footer">
-        <div class="images">
+        <div class="images hidden">
             <img src="/image/afro.png" width="189" height="146" class="afro">
             <img src="/image/hat.png" width="190" height="131" class="hat">
             <img src="/image/mr-sausage.png" width="196" height="161" class="sausage">
